apps/homeassistant/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      hostNetwork: true
      restartPolicy: Always
      containers:
      - name: home-assistant
        image: "ghcr.io/home-assistant/home-assistant:stable"
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8123
            protocol: TCP
        securityContext:
          privileged: true
          capabilities:
            add:
              - NET_ADMIN
              - NET_RAW
              - SYS_ADMIN
        volumeMounts:
          - name: ha-config-root
            mountPath: /config
          - mountPath: /config/configuration.yaml
            subPath: configuration.yaml
            name: ha-config-file
          - name: bluetooth
            hostPath:
              path: /var/run/dbus
      volumes:
        - name: ha-config-root
          persistentVolumeClaim:
            claimName: home-assistant
        - name: ha-config-file
          configMap:
            name: home-assistant
